<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Craigs List Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1_text">New Activity Please!</string>
    <string name="button2_text">It worked!</string>
    <string name="it_worked">It Worked!</string>
    <string name="action_refresh_str">Refresh</string>
    <string name="new_search_query">New Search</string>
    <string name="title_activity_new_search">New Search</string>
    <string name="search_query_hint">Enter search text here</string>
    <string name="min_ask_hint">Minimum asking price</string>
    <string name="max_ask_hint">Maximum asking price</string>
    <string name="has_pic_string">Only include posts with pictures</string>
    <string name="search_title_string">Search title</string>
    <string name="submit_button_string">Submit</string>
    <string name="title_search_results_title">Search Results</string>
    <string name="listing_image_description">Image Description</string>
    <string name="listing_name_default">Loading Listing...</string>
    <string-array name="categories_strings">
        <item >All for sale / wanted</item>
        <item >Antiques</item>
        <item >Arts + Crafts</item>
        <item >Auto parts</item>
        <item >Baby + Kids</item>
        <item >Barter</item>
        <item >Beauty + Health</item>
        <item >Bikes</item>
        <item >Boats</item>
        <item >Books</item>
        <item >Business</item>
        <item >Cars + Trucks</item>
        <item >CD/DVD/VHS</item>
        <item >Cell Phones</item>
        <item >Clothing + Accessories</item>
        <item >Collectibles</item>
        <item >Computers</item>
        <item >Electronics</item>
        <item >Farm + Garden</item>
        <item >Free Stuff</item>
        <item >Furniture</item>
        <item >Garage Sales</item>
        <item >General For Sale</item>
        <item >Household</item>
        <item >Items Wanted</item>
        <item >Jewlery</item>
        <item >Materials</item>
        <item >Motorcycles</item>
        <item >Musical Instruments</item>
        <item >Photo + Video</item>
        <item >Recreational Vehicles</item>
        <item >Sporting Goods</item>
        <item >Tickets</item>
        <item >Tools</item>
        <item >Toys + Games</item>
        <item >Video Gaming</item>
    </string-array>


</resources>
